[project]
name = "recbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langfuse>=3.0.0",
    "langfuse-llm",
    "openai>=1.85.0",
]

[tool.uv.sources]
langfuse-llm = { git = "https://github.com/icebreakerlabs/langfuse-llm.git" }
